修复 run 方法在界面未绘制执行导致的动画失效问题，添加动画时间和动画间隔时间属性的设置

--- a/VerticalRollingTextView-library/src/main/res/values/attrs.xml
+++ b/VerticalRollingTextView-library/src/main/res/values/attrs.xml
@@ -3,6 +3,9 @@
     <declare-styleable name="VerticalRollingTextView">
         <attr name="android:textColor"/>
         <attr name="android:textSize"/>
+        <attr name="android:duration"/>
+        <!--动画间隔-->
+        <attr name="animInterval" format="integer"/>
     </declare-styleable>
 </resources>
 
