--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="center"
@@ -20,12 +21,14 @@
             android:src="@mipmap/gd_xiaoxi"/>
 
         <com.xiaosu.VerticalRollingTextView
-            android:textColor="#FF0000"
-            android:textSize="16dp"
             android:id="@+id/verticalRollingView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginLeft="10dp"
+            android:duration="500"
+            android:textColor="#FF0000"
+            android:textSize="16dp"
+            app:animInterval="3000"/>
 
     </LinearLayout>
 
