--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,8 +27,8 @@
             android:layout_marginLeft="10dp"
             android:duration="500"
             android:textColor="#FF0000"
-            android:textSize="16dp"
-            app:animInterval="3000"/>
+            android:textSize="16sp"
+            app:animInterval="2000"/>
 
     </LinearLayout>
 
