--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,10 +25,61 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
-            android:duration="500"
+            android:duration="5000"
             android:textColor="#FF0000"
             android:textSize="16sp"
             app:animInterval="2000"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginTop="20dp"
+        android:background="@android:color/white"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:src="@mipmap/gd_xiaoxi"/>
+
+        <com.xiaosu.VerticalRollingTextView
+            android:id="@+id/verticalRollingView2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:duration="5000"
+            android:textColor="#FF0000"
+            android:textSize="16sp"
+            app:animInterval="2000"/>
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:background="@android:color/white"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:src="@mipmap/gd_xiaoxi"/>
+
+        <com.xiaosu.VerticalRollingTextView
+            android:id="@+id/verticalRollingView3"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:duration="500"
+            android:textColor="#0000FF"
+            app:animInterval="1000"
+            app:itemCount="2"/>
 
     </LinearLayout>
 
