--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
               android:paddingRight="15dp">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="50dp"
         android:background="@android:color/white"
         android:gravity="center_vertical">
@@ -20,12 +20,13 @@
             android:layout_marginLeft="15dp"
             android:src="@mipmap/gd_xiaoxi"/>
 
-        <com.xiaosu.VerticalRollingTextView
+        <com.xiaosu.view.text.VerticalRollingTextView
             android:id="@+id/verticalRollingView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:duration="5000"
+            android:ellipsize="end"
             android:textColor="#FF0000"
             android:textSize="16sp"
             app:animInterval="2000"/>
@@ -45,7 +46,7 @@
             android:layout_marginLeft="15dp"
             android:src="@mipmap/gd_xiaoxi"/>
 
-        <com.xiaosu.VerticalRollingTextView
+        <com.xiaosu.view.text.VerticalRollingTextView
             android:id="@+id/verticalRollingView2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -71,7 +72,7 @@
             android:layout_marginLeft="15dp"
             android:src="@mipmap/gd_xiaoxi"/>
 
-        <com.xiaosu.VerticalRollingTextView
+        <com.xiaosu.view.text.VerticalRollingTextView
             android:id="@+id/verticalRollingView3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
