--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,8 @@
             android:maxLines="3"
             android:textColor="#FF0000"
             android:textSize="16sp"
-            app:animInterval="2000"/>
+            app:animInterval="2000"
+            app:maxTextSize="13dp"/>
 
     </LinearLayout>
 
